--- a/language-ats/language-ats.cabal
+++ b/language-ats/language-ats.cabal
@@ -1,6 +1,6 @@
 cabal-version: 1.18
 name: language-ats
-version: 1.7.0.1
+version: 1.7.0.2
 license: BSD3
 license-file: LICENSE
 copyright: Copyright: (c) 2018 Vanessa McHale
@@ -47,14 +47,14 @@ library
         Language.ATS.Rewrite
     default-language: Haskell2010
     other-extensions: OverloadedStrings DeriveGeneric DeriveAnyClass
-                      FlexibleContexts FlexibleInstances PatternSynonyms
-                      StandaloneDeriving GeneralizedNewtypeDeriving DerivingStrategies
-                      DuplicateRecordFields DeriveFunctor TypeFamilies
+                      FlexibleContexts PatternSynonyms StandaloneDeriving
+                      GeneralizedNewtypeDeriving DerivingStrategies DuplicateRecordFields
+                      DeriveFunctor ScopedTypeVariables
     ghc-options: -Wall -O2
     build-depends:
         base >=4.9 && <5,
         array -any,
-        recursion-schemes >=5.0.1,
+        recursion >=1.0.0.0,
         microlens -any,
         deepseq -any,
         ansi-wl-pprint >=0.6.8,
