--- a/shake-cabal/shake-cabal.cabal
+++ b/shake-cabal/shake-cabal.cabal
@@ -1,6 +1,6 @@
 cabal-version: 1.18
 name: shake-cabal
-version: 0.1.0.4
+version: 0.1.0.5
 license: BSD3
 license-file: LICENSE
 copyright: Copyright: (c) 2018 Vanessa McHale
@@ -13,6 +13,7 @@ description:
 category: Development
 build-type: Simple
 extra-doc-files: README.md
+                 CHANGELOG.md
 
 source-repository head
     type: darcs
