--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ addons:
 matrix:
   include:
 
-  - env: TARGET=x86_64-unknown-linux
+  - env: TARGET=x86_64-unknown-linux GHC=8.4.3
     addons:
       apt:
         update: true
@@ -26,7 +26,7 @@ matrix:
         - ghc-8.4.3
         - cabal-install-2.2
 
-  - env: TARGET=x86_64-unknown-linux
+  - env: TARGET=x86_64-unknown-linux GHC=8.2.2
     addons:
       apt:
         update: true
@@ -37,7 +37,7 @@ matrix:
         - cabal-install-2.2
 
   # OS X
-  - env: TARGET=x86_64-apple-darwin
+  - env: TARGET=x86_64-apple-darwin GHC=8.4.3
     os: osx
 
 before_install:
@@ -91,6 +91,7 @@ deploy:
   - hs2ats-$TARGET
   on:
     tags: true
+    env: GHC=8.4.3
   provider: releases
   skip_cleanup: true
 
