--- a/appveyor.yml
+++ b/appveyor.yml
@@ -11,8 +11,8 @@ test_script:
 - refreshenv
 - cabal update
 - cabal new-build all
-- ps: Get-ChildItem . -name -recurse atspkg.exe
-- ps: Copy-Item dist-newstyle\build\x86_64-windows\ghc-8.4.3\ats-pkg-3.2.1.11\x\atspkg\opt\build\atspkg\atspkg.exe atspkg-x86_64-pc-windows.exe
+- ps: $directory = Get-ChildItem . -name -recurse atspkg.exe
+- ps: Copy-Item $directory atspkg-x86_64-pc-windows.exe
 - ps: Push-AppveyorArtifact atspkg-x86_64-pc-windows.exe
 
 deploy:
