--- a/cabal.project
+++ b/cabal.project
@@ -1,6 +1,6 @@
 packages: language-ats
         , ats-pkg
-        , ats-format
+        -- , ats-format
         , shake-ats
         , dependency
         , hs2ats
@@ -8,7 +8,7 @@ packages: language-ats
         , shake-c
 
 constraints:
-  ats-format +development -static,
+  -- ats-format +development -static,
   ats-pkg +development -eventlog -profile,
   shake-ext +development, 
   language-ats +development,
