--- a/cabal.project
+++ b/cabal.project
@@ -7,6 +7,8 @@ packages: language-ats
         , shake-cabal
         , shake-c
 
+documentation: true
+
 constraints:
   -- ats-format +development -static,
   ats-pkg +development -eventlog -profile,
