--- a/hs2ats/hs2ats.cabal
+++ b/hs2ats/hs2ats.cabal
@@ -1,6 +1,6 @@
 cabal-version: 1.18
 name: hs2ats
-version: 0.3.0.3
+version: 0.3.0.4
 license: BSD3
 license-file: LICENSE
 copyright: Copyright: (c) 2018 Vanessa McHale
@@ -14,6 +14,8 @@ build-type: Simple
 extra-source-files:
     test/data/*.hs
     test/data/*.out
+extra-doc-files: CHANGELOG.md
+                 README.md
 
 flag development
     description:
