--- a/ats-pkg/ats-pkg.cabal
+++ b/ats-pkg/ats-pkg.cabal
@@ -1,6 +1,6 @@
 cabal-version: 2.0
 name: ats-pkg
-version: 3.2.2.1
+version: 3.2.2.2
 license: BSD3
 license-file: LICENSE
 copyright: Copyright: (c) 2018 Vanessa McHale
@@ -98,7 +98,7 @@ library
         dependency >=1.2.0.0,
         filemanip -any,
         quaalude -any
-    
+
     if flag(development)
         ghc-options: -Werror
 
@@ -120,16 +120,16 @@ library quaalude
         microlens -any,
         dhall -any,
         ansi-wl-pprint -any,
-        shake -any,
+        shake >=0.17,
         bytestring -any,
         composition-prelude >=1.3.0.3,
         binary -any,
         text -any,
         mtl -any
-    
+
     if flag(development)
         cpp-options: -DDEBUG
-    
+
     if !os(windows)
         build-depends:
             unix -any
@@ -164,12 +164,12 @@ executable atspkg
         shake -any,
         cli-setup -any,
         quaalude -any
-    
+
     if flag(eventlog)
         ghc-options: -eventlog -with-rtsopts=-l
-    
+
     if flag(profile)
         ghc-options: -with-rtsopts=-h -with-rtsopts=-p
-    
+
     if flag(development)
         ghc-options: -Werror
