--- a/appveyor.yml
+++ b/appveyor.yml
@@ -8,7 +8,7 @@ cache:
 before_test:
 - choco install 7zip
 - choco install ghc
-- choco install cabal
+- choco install cabal-8.4.4
 
 test_script:
 - refreshenv
