experimental addition for GHC 8.6.1 migration

--- a/.gitattributes
+++ b/.gitattributes
@@ -2,4 +2,5 @@ language-ats/test/data/* linguist-vendored
 hs2ats/test/data/* linguist-vendored
 *.y linguist-language=Happy
 *.x linguist-language=Alex
+*.hspphs linguist-language=Haskell
 *.cpphs linguist-language=Haskell
