--- a/ats-pkg/ats-pkg.cabal
+++ b/ats-pkg/ats-pkg.cabal
@@ -1,6 +1,6 @@
 cabal-version: 2.0
 name: ats-pkg
-version: 3.2.2.4
+version: 3.2.3.0
 license: BSD3
 license-file: LICENSE
 copyright: Copyright: (c) 2018 Vanessa McHale
@@ -105,7 +105,6 @@ library
 library quaalude
     exposed-modules:
         Quaalude
-    build-tools: cpphs -any
     hs-source-dirs: internal
     other-modules:
         System.Process.Ext
@@ -125,7 +124,8 @@ library quaalude
         composition-prelude >=1.3.0.3,
         binary -any,
         text -any,
-        mtl -any
+        mtl -any,
+        containers >=0.6
 
     if flag(development)
         cpp-options: -DDEBUG
