--- a/cabal.project
+++ b/cabal.project
@@ -1,6 +1,6 @@
 packages: language-ats
         , ats-pkg
-        -- , ats-format
+        , ats-format
         , shake-ats
         , dependency
         , hs2ats
@@ -15,7 +15,7 @@ allow-newer:
     parallel-io:containers
 
 constraints:
-  -- ats-format +development -static,
+  ats-format +development -static,
   ats-pkg +development -eventlog -profile,
   shake-ext +development, 
   language-ats +development,
