--- a/hs2ats/hs2ats.cabal
+++ b/hs2ats/hs2ats.cabal
@@ -1,6 +1,6 @@
 cabal-version: 1.18
 name: hs2ats
-version: 0.4.0.0
+version: 0.5.0.0
 license: BSD3
 license-file: LICENSE
 copyright: Copyright: (c) 2018 Vanessa McHale
@@ -41,7 +41,8 @@ library
         microlens -any,
         ansi-wl-pprint -any,
         composition-prelude -any,
-        deepseq -any
+        deepseq -any,
+        cpphs -any
 
     if flag(development)
         ghc-options: -Werror
