--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,9 +2,6 @@
 
 build: off
 
-cache:
-- C:\ProgramData\chocolatey\lib -> appveyor.yml
-
 before_test:
 - choco install 7zip
 - choco install ghc
@@ -12,7 +9,7 @@ before_test:
 
 test_script:
 - refreshenv
-- cabal update
+- cabal new-update
 - cabal new-build all
 - ps: $directory = Get-ChildItem . -name -recurse atspkg.exe
 - ps: Copy-Item $directory atspkg-x86_64-pc-windows.exe
