--- a/shake-ats/shake-ats.cabal
+++ b/shake-ats/shake-ats.cabal
@@ -1,9 +1,9 @@
 cabal-version: 1.18
 name: shake-ats
-version: 1.10.2.1
+version: 1.10.2.0
 license: BSD3
 license-file: LICENSE
-copyright: Copyright: (c) 2018-2019 Vanessa McHale
+copyright: Copyright: (c) 2018 Vanessa McHale
 maintainer: vamchale@gmail.com
 author: Vanessa McHale
 homepage: https://github.com/vmchale/shake-ats#readme
