--- a/ats-pkg/ats-pkg.cabal
+++ b/ats-pkg/ats-pkg.cabal
@@ -1,6 +1,6 @@
 cabal-version: 2.0
 name: ats-pkg
-version: 3.2.4.6
+version: 3.2.5.0
 license: BSD3
 license-file: LICENSE
 copyright: Copyright: (c) 2018-2019 Vanessa McHale
@@ -82,7 +82,7 @@ library
         Cabal >=2.2.0.0,
         lzma -any,
         zlib -any,
-        libarchive,
+        libarchive -any,
         http-client-tls -any,
         text -any,
         process -any,
