--- a/language-ats/language-ats.cabal
+++ b/language-ats/language-ats.cabal
@@ -1,9 +1,9 @@
 cabal-version:   1.18
 name:            language-ats
-version:         1.7.0.5
+version:         1.7.0.6
 license:         BSD3
 license-file:    LICENSE
-copyright:       Copyright: (c) 2018 Vanessa McHale
+copyright:       Copyright: (c) 2018-2019 Vanessa McHale
 maintainer:      vamchale@gmail.com
 author:          Vanessa McHale
 stability:       stable
