--- a/.travis.yml
+++ b/.travis.yml
@@ -26,6 +26,7 @@ matrix:
         packages:
         - ghc-8.6.1
         - cabal-install-2.4
+        - libarchive-dev
 
   - env: TARGET=x86_64-unknown-linux GHC=8.4.4
     addons:
@@ -36,6 +37,7 @@ matrix:
         packages:
         - ghc-8.4.4
         - cabal-install-2.2
+        - libarchive-dev
 
   - env: TARGET=x86_64-unknown-linux GHC=8.2.2
     addons:
@@ -46,6 +48,7 @@ matrix:
         packages:
         - ghc-8.2.2
         - cabal-install-2.2
+        - libarchive-dev
 
   # OS X
   - env: TARGET=x86_64-apple-darwin GHC=8.6.1
