--- a/.travis.yml
+++ b/.travis.yml
@@ -76,6 +76,7 @@ script:
 - |
   if [ `uname` = "Darwin" ]
   then
+    brew install libarchive
     export BINPATH1="$(find dist-newstyle/ -name atspkg -perm 755 | tail -n1)"
     export BINPATH2="$(find dist-newstyle/ -name atsfmt -perm 755 | tail -n1)"
     export BINPATH3="$(find dist-newstyle/ -name hs2ats -perm 755 | tail -n1)"
