--- a/shake-c/shake-c.cabal
+++ b/shake-c/shake-c.cabal
@@ -1,6 +1,6 @@
 cabal-version: 1.18
 name: shake-c
-version: 0.4.0.0
+version: 0.4.1.0
 license: BSD3
 license-file: LICENSE
 copyright: Copyright: (c) 2018 Vanessa McHale
@@ -13,6 +13,7 @@ description:
 category: Development, C
 build-type: Simple
 extra-doc-files: README.md
+                 CHANGELOG.md
 
 source-repository head
     type: darcs
@@ -29,20 +30,21 @@ library
         Development.Shake.C
     hs-source-dirs: src
     default-language: Haskell2010
-    other-extensions: DeriveAnyClass DeriveGeneric
+    other-extensions: DeriveAnyClass DeriveGeneric DeriveDataTypeable
+                      TypeFamilies
     ghc-options: -Wall
     build-depends:
         base >=4.3 && <5,
         shake >=0.14,
         cdeps -any,
         composition-prelude -any
-    
+
     if flag(development)
         ghc-options: -Werror
-    
+
     if impl(ghc >=8.0)
         ghc-options: -Wincomplete-uni-patterns -Wincomplete-record-updates
                      -Wredundant-constraints -Wnoncanonical-monad-instances
-    
+
     if impl(ghc >=8.4)
         ghc-options: -Wmissing-export-lists
