--- a/shake-cabal/shake-cabal.cabal
+++ b/shake-cabal/shake-cabal.cabal
@@ -3,7 +3,7 @@ name: shake-cabal
 version: 0.2.0.0
 license: BSD3
 license-file: LICENSE
-copyright: Copyright: (c) 2018 Vanessa McHale
+copyright: Copyright: (c) 2018-2019 Vanessa McHale
 maintainer: vanessa.mchale@iohk.io
 author: Vanessa McHale
 bug-reports: https://hub.darcs.net/vmchale/ats/issues
@@ -29,7 +29,11 @@ library
     exposed-modules:
         Development.Shake.Cabal
     hs-source-dirs: src
+    other-modules:
+        Development.Shake.Cabal.Oracles
     default-language: Haskell2010
+    other-extensions: DeriveAnyClass DeriveGeneric DeriveDataTypeable
+                      TypeFamilies
     ghc-options: -Wall
     build-depends:
         base >=4.8 && <5,
@@ -37,14 +41,17 @@ library
         Cabal >=2.2,
         directory -any,
         composition-prelude -any,
-        filepath -any
-    
+        filepath -any,
+        deepseq -any,
+        hashable -any,
+        binary -any
+
     if flag(development)
         ghc-options: -Werror
-    
+
     if impl(ghc >=8.0)
         ghc-options: -Wincomplete-uni-patterns -Wincomplete-record-updates
                      -Wredundant-constraints -Wnoncanonical-monad-instances
-    
+
     if impl(ghc >=8.4)
         ghc-options: -Wmissing-export-lists
