--- a/ats-pkg/ats-pkg.cabal
+++ b/ats-pkg/ats-pkg.cabal
@@ -82,7 +82,6 @@ library
         Cabal >=2.2.0.0,
         lzma -any,
         zlib -any,
-        libarchive -any,
         http-client-tls -any,
         text -any,
         process -any,
@@ -97,7 +96,9 @@ library
         zip-archive -any,
         ansi-wl-pprint -any,
         dependency >=1.2.0.0,
-        quaalude -any
+        quaalude -any,
+        tar -any,
+        filemanip -any
 
     if flag(development)
         ghc-options: -Werror
