--- a/dependency/dependency.cabal
+++ b/dependency/dependency.cabal
@@ -41,7 +41,7 @@ library
         base >=4.9 && <5,
         ansi-wl-pprint -any,
         containers >=0.5.9,
-        microlens -any,
+        microlens >=0.3.5.0,
         binary -any,
         deepseq -any
     
