--- a/dependency/dependency.cabal
+++ b/dependency/dependency.cabal
@@ -42,7 +42,7 @@ library
         ansi-wl-pprint -any,
         containers >=0.5.9,
         microlens >=0.3.5.0,
-        binary -any,
+        binary >=0.7.3.0,
         deepseq -any
     
     if (flag(development) && impl(ghc <8.4))
