--- a/language-ats/language-ats.cabal
+++ b/language-ats/language-ats.cabal
@@ -58,7 +58,7 @@ library
         microlens >=0.3.0.0,
         deepseq -any,
         ansi-wl-pprint >=0.6.8,
-        composition-prelude -any,
+        composition-prelude >=2.0.4.0,
         containers -any,
         transformers -any
 
