--- a/ats-pkg/ats-pkg.cabal
+++ b/ats-pkg/ats-pkg.cabal
@@ -6,7 +6,7 @@ license-file: LICENSE
 copyright: Copyright: (c) 2018-2019 Vanessa McHale
 maintainer: vamchale@gmail.com
 author: Vanessa McHale
-tested-with: ghc ==8.4.4 ghc ==8.2.2 ghc ==8.6.4
+tested-with: ghc ==8.4.4 ghc ==8.6.5
 bug-reports: https://github.com/vmchale/atspkg/issues
 synopsis: A build tool for ATS
 description:
