--- a/language-ats/language-ats.cabal
+++ b/language-ats/language-ats.cabal
@@ -1,17 +1,18 @@
-cabal-version: 1.18
-name: language-ats
-version: 1.7.2.0
-license: BSD3
-license-file: LICENSE
-copyright: Copyright: (c) 2018-2019 Vanessa McHale
-maintainer: vamchale@gmail.com
-author: Vanessa McHale
-stability: stable
-synopsis: Parser and pretty-printer for ATS.
+cabal-version:   1.18
+name:            language-ats
+version:         1.7.2.0
+license:         BSD3
+license-file:    LICENSE
+copyright:       Copyright: (c) 2018-2019 Vanessa McHale
+maintainer:      vamchale@gmail.com
+author:          Vanessa McHale
+stability:       stable
+synopsis:        Parser and pretty-printer for ATS.
 description:
     Parser and pretty-printer for [ATS](http://www.ats-lang.org/), written with Happy and Alex.
-category: Language, Lexer, Parser, Pretty Printer, ATS
-build-type: Simple
+
+category:        Language, Lexer, Parser, Pretty Printer, ATS
+build-type:      Simple
 data-files:
     test/data/*.dats
     test/data/*.sats
@@ -20,29 +21,28 @@ data-files:
     test/data/stdlib/*.out
     test/data/stdlib/DATS/*.dats
     test/data/stdlib/DATS/*.out
-extra-doc-files: README.md
-                 CHANGELOG.md
+
+extra-doc-files:
+    README.md
+    CHANGELOG.md
 
 source-repository head
-    type: darcs
+    type:     darcs
     location: https://hub.darcs.net/vmchale/ats
 
 flag cross
-    description:
-        Set this flag if cross-compiling
-    default: False
-    manual: True
+    description: Set this flag if cross-compiling
+    default:     False
+    manual:      True
 
 flag development
-    description:
-        Enable `-Werror`
-    default: False
-    manual: True
+    description: Enable `-Werror`
+    default:     False
+    manual:      True
 
 library
-    exposed-modules:
-        Language.ATS
-    hs-source-dirs: src
+    exposed-modules:  Language.ATS
+    hs-source-dirs:   src
     other-modules:
         Language.ATS.Lexer
         Language.ATS.Parser
@@ -50,12 +50,15 @@ library
         Language.ATS.Types
         Language.ATS.Types.Lens
         Language.ATS.Rewrite
+
     default-language: Haskell2010
-    other-extensions: OverloadedStrings DeriveGeneric DeriveAnyClass
-                      FlexibleContexts PatternSynonyms StandaloneDeriving
-                      GeneralizedNewtypeDeriving DerivingStrategies DuplicateRecordFields
-                      DeriveFunctor ScopedTypeVariables
-    ghc-options: -Wall -O2
+    other-extensions:
+        OverloadedStrings DeriveGeneric DeriveAnyClass FlexibleContexts
+        PatternSynonyms StandaloneDeriving GeneralizedNewtypeDeriving
+        DerivingStrategies DuplicateRecordFields DeriveFunctor
+        ScopedTypeVariables
+
+    ghc-options:      -Wall -O2
     build-depends:
         base >=4.9 && <5,
         array -any,
@@ -74,15 +77,15 @@ library
         ghc-options: -Werror
 
     if impl(ghc >=8.0)
-        ghc-options: -Wincomplete-uni-patterns -Wincomplete-record-updates
-                     -Wcompat
+        ghc-options:
+            -Wincomplete-uni-patterns -Wincomplete-record-updates -Wcompat
 
 test-suite language-ats-test
-    type: exitcode-stdio-1.0
-    main-is: Spec.hs
-    hs-source-dirs: test
+    type:             exitcode-stdio-1.0
+    main-is:          Spec.hs
+    hs-source-dirs:   test
     default-language: Haskell2010
-    ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
+    ghc-options:      -threaded -rtsopts -with-rtsopts=-N -Wall
     build-depends:
         base -any,
         language-ats -any,
@@ -97,11 +100,11 @@ test-suite language-ats-test
         ghc-options: -Wincomplete-uni-patterns -Wincomplete-record-updates
 
 benchmark language-ats-bench
-    type: exitcode-stdio-1.0
-    main-is: Bench.hs
-    hs-source-dirs: bench
+    type:             exitcode-stdio-1.0
+    main-is:          Bench.hs
+    hs-source-dirs:   bench
     default-language: Haskell2010
-    ghc-options: -Wall -O2
+    ghc-options:      -Wall -O2
     build-depends:
         base -any,
         language-ats -any,
