--- a/.stylish-haskell.yaml
+++ b/.stylish-haskell.yaml
@@ -21,4 +21,4 @@ steps:
 - trailing_whitespace: {}
 columns: 160
 newline: native
-language_extensions: [CPP]
+language_extensions: [CPP, FlexibleContexts]
