--- a/ats-format/ats-format.cabal
+++ b/ats-format/ats-format.cabal
@@ -1,46 +1,48 @@
-cabal-version: 1.18
-name: ats-format
-version: 0.2.0.31
-license: BSD3
-license-file: LICENSE
-copyright: Copyright: (c) 2017-2019 Vanessa McHale
-maintainer: vamchale@gmail.com
-author: Vanessa McHale
-synopsis: A source-code formatter for ATS
+cabal-version:      1.18
+name:               ats-format
+version:            0.2.0.31
+license:            BSD3
+license-file:       LICENSE
+copyright:          Copyright: (c) 2017-2019 Vanessa McHale
+maintainer:         vamchale@gmail.com
+author:             Vanessa McHale
+synopsis:           A source-code formatter for ATS
 description:
     An opinionated source-code formatter for [ATS](http://www.ats-lang.org/).
-category: Parser, Language, ATS, Development
-build-type: Custom
+
+category:           Parser, Language, ATS, Development
+build-type:         Custom
 extra-source-files:
     man/atsfmt.1
     .atsfmt.toml
-extra-doc-files: README.md
-                 CHANGELOG.md
+
+extra-doc-files:
+    README.md
+    CHANGELOG.md
 
 source-repository head
-    type: darcs
+    type:     darcs
     location: https://hub.darcs.net/vmchale/ats
 
 custom-setup
-    setup-depends: base -any,
-                   Cabal -any,
-                   cli-setup >=0.1.0.2,
-                   filepath -any
+    setup-depends:
+        base -any,
+        Cabal -any,
+        cli-setup >=0.1.0.2,
+        filepath -any
 
 flag development
-    description:
-        Enable `-Werror`
-    default: False
-    manual: True
+    description: Enable `-Werror`
+    default:     False
+    manual:      True
 
 executable atsfmt
-    main-is: Main.hs
-    hs-source-dirs: src
-    other-modules:
-        Paths_ats_format
+    main-is:          Main.hs
+    hs-source-dirs:   src
+    other-modules:    Paths_ats_format
     default-language: Haskell2010
     other-extensions: OverloadedStrings TemplateHaskell
-    ghc-options: -Wall
+    ghc-options:      -Wall
     build-depends:
         base >=4.9 && <5,
         language-ats >=1.7.4.0,
@@ -53,9 +55,9 @@ executable atsfmt
         unordered-containers -any,
         process -any,
         file-embed >=0.0.9
-    
+
     if flag(development)
         ghc-options: -Werror
-    
+
     if impl(ghc >=8.0)
         ghc-options: -Wincomplete-uni-patterns -Wincomplete-record-updates
