--- a/hs2ats/hs2ats.cabal
+++ b/hs2ats/hs2ats.cabal
@@ -1,9 +1,9 @@
 cabal-version: 1.18
 name: hs2ats
-version: 0.5.0.0
+version: 0.5.0.1
 license: BSD3
 license-file: LICENSE
-copyright: Copyright: (c) 2018 Vanessa McHale
+copyright: Copyright: (c) 2018-2019 Vanessa McHale
 maintainer: vamchale@gmail.com
 author: Vanessa McHale
 synopsis: Create ATS types from Haskell types
