--- a/.hlint.yaml
+++ b/.hlint.yaml
@@ -2,6 +2,7 @@
 - ignore: {name: Avoid lambda, within: [Language.ATS.Types.Lens]}
 - ignore: {name: Unused LANGUAGE pragma, within: [Language.ATS.PrettyPrint]}
 - ignore: {name: Use foldr, within: [Language.ATS.Generate]}
+- ignore: {name: Use section}
 
 - fixity: infixr 8 .*
 - fixity: infixr 3 ***
