don't cache lol?

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,11 @@
 ---
 sudo: false
 language: c
-cache:
-  directories:
-  - $HOME/.cabal
-  - $HOME/.ghc
-  - $HOME/.atspkg
+# cache:
+  # directories:
+  # - $HOME/.cabal
+  # - $HOME/.ghc
+  # - $HOME/.atspkg
 addons:
   apt:
     packages:
