--- a/shake-ats/shake-ats.cabal
+++ b/shake-ats/shake-ats.cabal
@@ -1,43 +1,44 @@
-cabal-version: 1.18
-name: shake-ats
-version: 1.10.3.0
-license: BSD3
-license-file: LICENSE
-copyright: Copyright: (c) 2018-2019 Vanessa McHale
-maintainer: vamchale@gmail.com
-author: Vanessa McHale
-tested-with: ghc ==8.4.4 ghc ==8.6.5
-synopsis: Utilities for building ATS projects with shake
+cabal-version:   1.18
+name:            shake-ats
+version:         1.10.3.0
+license:         BSD3
+license-file:    LICENSE
+copyright:       Copyright: (c) 2018-2019 Vanessa McHale
+maintainer:      vamchale@gmail.com
+author:          Vanessa McHale
+tested-with:     ghc ==8.4.4 ghc ==8.6.5
+synopsis:        Utilities for building ATS projects with shake
 description:
     Various helper functions for building [ATS](http://www.ats-lang.org/) with the [shake](http://shakebuild.com/) library
-category: Development, Build, ATS, Shake
-build-type: Simple
-extra-doc-files: README.md
-                 CHANGELOG.md
+
+category:        Development, Build, ATS, Shake
+build-type:      Simple
+extra-doc-files:
+    README.md
+    CHANGELOG.md
 
 source-repository head
-    type: git
+    type:     git
     location: git@github.com:vmchale/atspkg.git
-    subdir: shake-ats
+    subdir:   shake-ats
 
 flag development
-    description:
-        Enable `-Werror`
-    default: False
-    manual: True
+    description: Enable `-Werror`
+    default:     False
+    manual:      True
 
 library
-    exposed-modules:
-        Development.Shake.ATS
-    hs-source-dirs: src
+    exposed-modules:  Development.Shake.ATS
+    hs-source-dirs:   src
     other-modules:
         Development.Shake.ATS.Type
         Development.Shake.ATS.Rules
         Development.Shake.ATS.Environment
         Development.Shake.ATS.Generate
+
     default-language: Haskell2010
     other-extensions: RecordWildCards DeriveGeneric DeriveAnyClass
-    ghc-options: -Wall
+    ghc-options:      -Wall
     build-depends:
         base >=4.9 && <5,
         language-ats -any,
