--- a/shake-ats/shake-ats.cabal
+++ b/shake-ats/shake-ats.cabal
@@ -1,6 +1,6 @@
 cabal-version:   1.18
 name:            shake-ats
-version:         1.10.3.0
+version:         1.10.4.0
 license:         BSD3
 license-file:    LICENSE
 copyright:       Copyright: (c) 2018-2019 Vanessa McHale
@@ -41,7 +41,7 @@ library
     ghc-options:      -Wall
     build-depends:
         base >=4.9 && <5,
-        language-ats -any,
+        language-ats >=1.7.7.0,
         shake-ext >=3.0.0.0,
         hs2ats >=0.5.0.0,
         directory -any,
@@ -51,7 +51,8 @@ library
         shake >=0.14,
         binary -any,
         shake-cabal -any,
-        shake-c >=0.4.0.0
+        shake-c >=0.4.0.0,
+        cdeps >=0.1.3.0
 
     if flag(development)
         ghc-options: -Werror
