Use toml-parser instead of htoml-megaparsec

--- a/ats-format/ats-format.cabal
+++ b/ats-format/ats-format.cabal
@@ -1,6 +1,6 @@
 cabal-version:      1.18
 name:               ats-format
-version:            0.2.0.31
+version:            0.2.0.32
 license:            BSD3
 license-file:       LICENSE
 copyright:          Copyright: (c) 2017-2019 Vanessa McHale
@@ -47,14 +47,12 @@ executable atsfmt
         base >=4.9 && <5,
         language-ats >=1.7.4.0,
         optparse-applicative -any,
-        htoml-megaparsec >=2.1.0.0,
-        megaparsec >=7.0.0,
         text -any,
         ansi-wl-pprint -any,
         directory -any,
-        unordered-containers -any,
         process -any,
-        file-embed >=0.0.9
+        file-embed >=0.0.9,
+        toml-parser -any
 
     if flag(development)
         ghc-options: -Werror
